--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-    <Chat_App_Illustration: A illustration made for a Fronten Mentor Challenge>
+    <Chat_App_Illustration: A illustration made for a Frontend Mentor Challenge>
     Copyright (C) <2022>  <Cromega>
 
     This program is free software: you can redistribute it and/or modify
